--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite Marc</title>
+    <link href="style.css" rel="stylesheet">
+    <title>Pàgina Web Pirateria Marc Llaó</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <h1 class="text-5xl font-bold underline">AIXÒ FUNCIONA</h1>
   </body>
 </html>
